[gd_scene load_steps=3 format=3 uid="uid://nvqxuwunitvo"]

[ext_resource type="Script" path="res://project.gd" id="1_0lk13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1611"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1
border_color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="PanelContainer" type="PanelContainer"]
offset_left = 151.0
offset_right = 151.0
offset_bottom = 31.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a1611")
script = ExtResource("1_0lk13")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Hbox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ProjectLabel" type="Label" parent="MarginContainer/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dog"

[node name="VersionLabel" type="Label" parent="MarginContainer/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dog"

[node name="LaunchButton" type="Button" parent="MarginContainer/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Launch"
